# RustHetGraph

./: .gitignore  Cargo.toml  README.md  build.rs  loadcsv.sh
benches/: my_benchmark.rs  pipeline.rs
cuda/: degree.cu  frontier_expand.cu  inc.cu
edge_list_to_csr/: Cargo.toml
edge_list_to_csr/src/: main.rs
graph-loader/: Cargo.toml
graph-loader/src/: main.rs  mod.rs
graph-loader/ssspData/: edges-cgraph.csv  edges-simple.csv  edges.csv  nodes-cgraph.csv  nodes-simple.csv  nodes.csv
raw_results_log/graphs/: parse_compare_bfs_logs.py  plot_compare_bfs_both.py  plot_compare_bfs_logs.py
results_log/parsed/: AdjPrefix_levels.csv  AdjPrefix_trials.csv  perf_summary.csv
src/: compare_dist.rs  lib.rs  main.rs
src/alg/: bfs.rs  bfs_coop.rs  mod.rs  sssp.rs
src/gpu/: mod.rs  runtime.rs  subgraph_device.rs
src/graph/: compare.rs  csr.rs  fps.rs  io_bin.rs  mod.rs  permute.rs  reorder.rs  stats.rs  subgraph.rs
