[package]
name = "RustHetGraph"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
neo4rs = "0.9.0-rc.9"
petgraph = "0.8.3"
criterion = "0.8.0"
clap = {version = "4.5.53", features = ["derive"]}

[[bench]]
name = "my_benchmark"
harness = false

[lib]
name = "rust_het_graph"
path = "graph-loader/src/mod.rs"